k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arriendatufinca-front-deployment
  namespace: arriendatufinca
spec:
  selector:
    matchLabels:
      app: arriendatufinca-front-deployment
  replicas: 1
  template:
    metadata:
      labels:
         app: arriendatufinca-front-deployment
    spec:
      imagePullSecrets:
         - name: github-secret
      containers:
         - name: estudiante
           image: localhost:5000/arriendatufinca-front:latest
           ports:
              - containerPort: 80
           
---
apiVersion: v1
kind: Service
metadata:
  name: arriendatufinca-front-service
  namespace: arriendatufinca
spec:
  type: NodePort
  selector:
    app: arriendatufinca-front-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30081
