k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arriendatufinca-front-ingress
  namespace: arriendatufinca
spec:
  ingressClassName: public
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: arriendatufinca-front-service
                port:
                  number: 80
